--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "sourceHost":"mail.mijndomein.nl",
-  "sourceUsername":"dev@b-visually.com",
-  "sourcePassword":"pCS2EczPLh!pCS2EczPLh",
+  "sourceHost":"",
+  "sourceUsername":"",
+  "sourcePassword":"",
   "sourcePort":993,
   "sourceCheckSSL":false,
-  "destinationHost":"server.fullstak.nl",
-  "destinationUsername":"dev@b-visually.com",
-  "destinationPassword":"pCS2EczPLh",
+  "destinationHost":"",
+  "destinationUsername":"",
+  "destinationPassword":"",
   "destinationPort":993,
   "destinationCheckSSL":false
 }
